[tool.poetry]
name = "attestation"
version = "0.1.0"
description = ""
authors = ["sacred70 <sacred70@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
envparse = "^0.2.0"
docker = "^6.1.3"
compose = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
